# marginalia

./: .gitignore  README.md  hermes-vs-claude.html  index.html  package-lock.json  package.json  session-report.html  vite.config.ts
browser-extension/: .amo-upload-uuid  README.md  background.js  clip.js  manifest.json  marg.js  popup.html  popup.js  scan.js
docs/: AI-PLAN.md  ALPHAXIV-PLAN.md  BOOKMARKS-AND-FEEDS-PLAN.md  EMBEDDINGS-PLAN.md  HUGGINGFACE-PLAN.md  IOS-PLAN.md  LIQUID-GLASS-PLAN.md  NATIVE-IOS-SERVER-PLAN.md  NATIVE-IOS-SPIKE.md  SEARCH-ENGINE-PLAN.md  SELECTION-AND-SEARCH-PLAN.md  SWIFT-PORT-PLAN.md  UX-IMPROVEMENTS-PLAN.md
ios-native/: project.yml
ios-native/MarginaliaSpike.xcodeproj/: project.pbxproj
ios-native/MarginaliaSpike.xcodeproj/xcshareddata/xcschemes/: MarginaliaMac.xcscheme  MarginaliaSpike.xcscheme
ios-native/Resources/: seed.json
ios-native/Sources/App/: AppModel.swift  MarginaliaApp.swift
ios-native/Sources/Common/: ChatService.swift  Citation.swift  CiteService.swift  Crypto.swift  DiscoverService.swift  FeedService.swift  LatestFeed.swift  LookupService.swift  PDFService.swift  RemoteSync.swift  RetractionService.swift  SRS.swift  SearchService.swift  SyncService.swift  TtsService.swift
ios-native/Sources/Data/: Repository.swift
ios-native/Sources/Features/: AddPaperView.swift  ChatView.swift  CiteView.swift  DashboardView.swift  EditPaperView.swift  GraphView.swift  LibraryView.swift  MarkdownText.swift  PDFKitView.swift  ReaderView.swift  SecondaryViews.swift  SettingsView.swift  SidebarView.swift  StudyViews.swift
ios-native/Sources/Models/: Models.swift
ios-native/Sources/macOS/: MacAddPaperView.swift  MacChatView.swift  MacCiteView.swift  MacDashboardView.swift  MacDiscoverView.swift  MacEditPaperView.swift  MacExport.swift  MacFeedsView.swift  MacGraphView.swift  MacLibraryView.swift  MacMarkdownText.swift  MacNotebookView.swift  MacPDFKitView.swift  MacReaderView.swift  MacRootView.swift  MacSettingsView.swift  MacSidebarView.swift  MacStudyViews.swift  MarginaliaMacApp.swift
ios/share-extension/: Info.plist  README.md  ShareViewController.swift
scripts/: gen-icon.mjs  gen-seed.mjs  smoke.mjs
server/: Dockerfile  README.md  cite.mjs  package-lock.json  package.json  server.mjs
server-rs/: Cargo.toml  Dockerfile  README.md
server-rs/core/: Cargo.toml
server-rs/core/src/: embeddings.rs  lib.rs  metadata.rs
server-rs/server/: Cargo.toml
server-rs/server/src/: main.rs
server/sidecar/: package-lock.json  package.json  tts.mjs
src/: App.tsx  data.ts  icons.tsx  store.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecar/: agent.mjs  package-lock.json  package.json
src-tauri/src/: agent.rs  capture.rs  db.rs  embeddings.rs  lib.rs  main.rs  metadata.rs  tts.rs
src/components/: ChatPanel.tsx  CommandPalette.tsx  Dashboard.tsx  Discover.tsx  Feeds.tsx  Flashcards.tsx  GraphView.tsx  Library.tsx  Modals.tsx  Notebook.tsx  Onboarding.tsx  Reader.tsx  Recommendations.tsx  Review.tsx  Settings.tsx  Sidebar.tsx  TitleBar.tsx  Toast.tsx
src/lib/: agent.ts  citation.ts  crypto.ts  csl.ts  dedupe.ts  discover.ts  embeddings.ts  feeds.ts  items.ts  library.ts  localRepo.ts  markdown.ts  metadata.ts  pdf.ts  reading.ts  references.ts  repo.ts  retraction.ts  review.ts  search.ts  sync.ts  tauri.ts  tauriRepo.ts  time.ts  tts.ts
src/styles/: app.css  tokens.css
