# Marginalia self-hosted data + sync server (Rust/Axum).
# Self-contained workspace: the shared SQLite/metadata/embeddings logic lives in
# the `core` crate (server-rs/core/src/{db,metadata,embeddings}.rs). It was moved
# here from the retired Tauri desktop app, which the native Swift apps replace.
[workspace]
resolver = "2"
members = ["core", "server"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
