[package]
name = "marginalia"
version = "0.1.0"
description = "Local-first research paper manager"
authors = ["you"]
edition = "2021"

[lib]
name = "marginalia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
# marginalia:// deep link so the browser extension can launch/focus the app
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
# SQLite with FTS5 (bundled amalgamation enables FTS5 by default)
rusqlite = { version = "0.32", features = ["bundled"] }
# HTTP for DOI / arXiv metadata lookup + PDF download
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
# Native window translucency: Liquid Glass / vibrancy on macOS, acrylic on Windows.
# Desktop-only — excluded from mobile (iOS/Android) targets so the Rust side can
# compile for aarch64-apple-ios. Its usage in lib.rs is already cfg-gated.
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
window-vibrancy = "0.5"

# Filesystem watching for watch folders — desktop only (notify has no iOS backend).
# Its usage in lib.rs is cfg(desktop)-gated. Excluded from mobile targets.
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
notify = "6"
