[package]
name = "marginalia-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "marginalia-server"
path = "src/main.rs"

[dependencies]
marginalia-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
axum = { version = "0.7", features = ["json", "tokio"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
async-stream = "0.3"
base64 = "0.22"
